--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^3.2.0",
+    "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
@@ -26,6 +29,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
